# tinyskpt

./: .gitignore  README.md  pyproject.toml
streamlit_app/: main.py  main_st.py  model_output_config.py
streamlit_app/model_outputs/hongloumeng_output/: loss_history.json  tokenizer.json
streamlit_app/model_outputs/tinyshakespeare_output/: loss_history.json  tokenizer.json
streamlit_app/pages/: 0_Inference.py  1_Inspect_Attention_Weights.py
tinyskpt/: attn.py  attn_test.py  config_types.py  data_utils.py  main.py  token_utils.py  train.py
tinyskpt/config/: prod_config.yaml  test_config.yaml
tinyskpt/data/: default_config.yaml
